# nixsearch

./: .gitignore  Cargo.toml  PLAN.md  README.md  nix-search.example.toml  nixsearch.example.toml  opencode.json
.github/workflows/: container.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/tests/: cli_smoke.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  data.rs  error.rs  lib.rs  producer.rs  server.rs  source.rs  tests.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: artifact.rs  document.rs  lib.rs  target.rs
crates/index/: Cargo.toml
crates/index-test-support/: Cargo.toml
crates/index-test-support/src/: lib.rs
crates/index/src/: generation.rs  generation_validator.rs  integrity.rs  lib.rs  manifest.rs  query.rs  seo.rs  seo_sidecar.rs  store.rs  writer.rs
crates/index/tests/: search_behavior.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/ingest/tests/: fixtures.rs
crates/ops/: Cargo.toml
crates/ops/src/: cleanup.rs  consume.rs  generate.rs  produce.rs  seo.rs  targets.rs
crates/service/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: artifact.rs  consumer.rs  error.rs  lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/web/: Cargo.toml  style.css
crates/web/src/: handlers.rs  lib.rs  maintenance.rs  metadata.rs  origin.rs  (+7 more)
fixtures/eval-modules-flake/: flake.nix
fixtures/search-small/: README.md  options.json  packages.json
nix/: cargo.nix  container.nix
(+35 files in other folders)
